Bug 180525 - kate dont copy paste
Summary: kate dont copy paste
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: unspecified Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL:
Keywords:
: 185935 187910 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-01-13 05:46 UTC by Fabio Ortolan
Modified: 2009-04-01 20:12 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Fabio Ortolan 2009-01-13 05:46:50 UTC
Version:           3.1.80 (using 4.1.80 (KDE 4.1.80 (KDE 4.2 Beta1)), MS Visual Studio 2005 SP1)
Compiler:          cl.exe
OS:                Microsoft Windows (i686) release 5.0 (2000 Professional)

Hi!

I can't copy paste on this ways:

kate -> kate (on same file and on different file)
kate -> outside

But outside --> kate its ok!

I don't try with other program but maybe this error are in other programs

Loaded plugins:

- Default install (im editing html and css)

Backtraces:

- Sorry i don't know how to do it. :(

How to reproduce:

- Try copy paste things

Expected Behaviour:

- Copy paste works

Sorry for my poor english
Comment 1 JAcky 2009-02-04 15:56:24 UTC
I have the same problem, looks like the problem has been fixed https://bugs.kde.org/show_bug.cgi?id=158069

But the Windows binaries (4.2.0) available for download have not been updated. Could someone rebuild them, please.

Thanks
Comment 2 Christian Ehrlicher 2009-02-04 17:56:30 UTC
Works fine for me on XP with svnHead
Comment 3 JAcky 2009-02-04 18:46:59 UTC
RE: Christian Ehrlicher
No it is not working, my system Windows XP.
Latest KDE (for windows) 4.2.0 with kate. Kate will stop copy pasting randomly, closing and starting kate again will fix this problem.

Sometimes it takes 2 CTRL+C/CTRL+V for it to stop working, sometimes it will stop after 20 or more but it always happens.

This worked fine with KDE 4.1.3
Comment 4 Christian Ehrlicher 2009-02-26 20:59:27 UTC
SVN commit 932505 by chehrlic:

Fix possible copy'n'paste problems on windows when solid backend failed to load because it then called CoUninitialize without checkin if it's allowed to do so.
Should be backported to 4.2

BUG: 180525

 M  +11 -6     wmiquery.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=932505
Comment 5 Christian Ehrlicher 2009-03-02 17:39:57 UTC
*** Bug 185935 has been marked as a duplicate of this bug. ***
Comment 6 Christian Ehrlicher 2009-04-01 20:12:15 UTC
*** Bug 187910 has been marked as a duplicate of this bug. ***