Fix possible copy'n'paste problems on windows when solid backend failed to load because it then called CoUninitialize without checkin if it's allowed to do so. Should be backported to 4.2

BUG: 180525

svn path=/trunk/KDE/kdelibs/; revision=932505